--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-intl": "^6.2.6"
   },
   "scripts": {
     "serve": "webpack serve --mode development",
@@ -13,6 +14,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
+    "@babel/generator": "^7.20.14",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
